# Bioinformatics

./: BRCA1.fa  README.md  ml.ipynb  motif.py  parser.py
.devcontainer/: devcontainer.json
QualityDecoder/: README.md  app.py  fastq_converter.py  pyproject.toml  sample_data.py
Single Cell/: pdace.py
Single Cell /: main.py
rna_seq_project/data/: README.md  Tumor_1.fastq  normal_1.fastq
